# cmake-avr

./: generic-gcc-avr.cmake
example-c++/: CMakeLists.txt
